css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-family: sans-serif;
  min-height: 100%;
}

*, *::before, *::after {
  box-sizing: inherit;
}

header {
  background-color: #808080;
  color: #dbd6cf;
  margin: 0;
  border: 3px solid #595652;
}

body {
  background-color: #d3d3d3;
  padding: 0;
  margin: 0;
}

h1 {
  color: #fff;
  margin: 0;
  font-family: 'Cedarville cursive';
  font-weight: normal;
  text-align: center;
}

ul {
  margin: 0;
  padding: .3em;
  text-align: center;
}

.nav li {
  display: inline-block;
  list-style-type: square;
  background-color: #696969;
  color: #dbd6cf;
  border-radius: 5px;
}

a {
  font-family: arial, sans-serif;
  text-decoration: none;
  color: #fff;
  display: inline-block;
  padding: .6em .5em .75em;
  margin: 0;
  border-radius: 5px;
  width: 5em;
}

a:hover {
  background-color: #789;
  color: #dbd6cf;
}

figcaption {
  font-style: italic;
  text-align: center;
  font-size: 130%;
}

h2 {
  text-align: center;
}

main {
  text-align: center;

}

p {
  max-width: 100%;
  padding-left: 1em;
  text-align: center;
}

section {
  padding-top: 1em;
}

img {
  width: 75%;
}

.image-1 {
  padding-top: 1em;
  padding-left: 20%
}

.image-2 {
  padding-left: 20%;
}

.hex-1 {
  display: none;
  overflow: hidden;
}

.hex-2 {
  display: none;
  overflow: hidden;
}

.chocolatiers {
  background-color: #808080;
  height: 3em;
  width: 100%;
  bottom: 0;
  border: 3px solid #595652;
  position: relative;
}

@media only screen and (min-width: 25em) {

  html {
    font-size: 100%;
    line-height: 1.3;
  }

  figcaption {
    font-style: italic;
    float: none;
    padding-left: 0em;
    padding-top: 1em
  }

  section {
    float: right;
    text-align: right;
    padding-top: 1em;
  }

  p {
    float: left;
  }

  .image-1 {
    float: left;
    padding-left: .5em;
    width: 33.3333%;
  }

  .image-2 {
    float: left;
    padding-left: .5em;
    width: 33.3333%;
  }

  .hex-1 {
    display:block;
    max-width: 9em;
    width: 40%;
    float: right;
    padding-top: 2em;
  }

  .hex-2 {
    display: block;
    max-width: 8em;
    width: 40%;
    float: left;
    padding-top: 2em;
  }

  .chocolatiers {
    background-color: #808080;
    height: 3em;
    width: 100%;
    bottom: 0;
    border: 3px solid #595652;
    position: absolute;
  }
}
@media only screen and (min-width: 38em) {

  html {
    font-size: 110%;
    line-height: 1.4;
  }

  header {
    background-color: #808080;
    color: #dbd6cf;
    margin: 0;
    border: 3px solid #595652;
  }

  h1 {
    color: #fff;
    margin: 0;
    font-family: 'Cedarville cursive';
    font-weight: normal;
    text-align: center;
    float: left;
  }

  ul {
    margin: 0;
    padding: .3em;
    text-align: center;
  }

  .nav li {
    display: inline-block;
    list-style-type: square;
    background-color: #696969;
    color: #dbd6cf;
    border-radius: 5px;
  }

  a {
    font-family: arial, sans-serif;
    text-decoration: none;
    color: #fff;
    display: inline-block;
    padding: .6em .5em .75em;
    margin: 0;
    border-radius: 5px;
    width: 5em;
  }

  a:hover {
    background-color: #789;
    color: #dbd6cf;
  }

  figcaption {
    font-style: italic;
    margin: 0;
    padding-top: 2em;
    font-size: 135%;
  }

  section {
    padding-top: 5em;
    padding-bottom: 2em;
    float: none;
    text-align: center;
  }

  .description {
    max-width: 95%;
  }

  .image-1 {
    float: right;
    padding-left: .5em;
    margin: 0;
    width: 45%;
  }

  .image-2 {
    float: left;
    padding-left: .5em;
    width: 33.3333%;
  }

  .hex-1 {
    display:block;
    max-width: 7em;
    width: 30%;
    float: right;
    padding-top: 2em;
  }

  .hex-2 {
    display: block;
    max-width: 7em;
    width: 30%;
    float: left;
    padding-top: 2em;
  }

  .chocolatiers {
    background-color: #808080;
    height: 3em;
    width: 100%;
    bottom: 0;
    border: 3px solid #595652;
    position: absolute;
  }
}

@media only screen and (min-width: 60em) {

  html {
    font-size: 120%;
    line-height: 1.5;
  }

  h2 {
    padding-top: 3em;
  }

  figcaption {
    font-style: italic;
    margin: 0;
    padding-top: 2em;
    font-size: 135%;
  }

  section {
    padding-top: 2em;
    float: none;
    text-align: center;
  }

  .description {
    max-width: 95%;
  }

  .image-1 {
    float: right;
    padding-left: .5em;
    margin: 0;
    width: 45%;
  }

  .image-2 {
    float: left;
    padding-left: .5em;
    padding-top: 1em;
    width: 33.3333%;
  }

  .hex-1 {
    display:block;
    max-width: 7em;
    width: 30%;
    float: right;
    padding-top: 2em;
  }

  .hex-2 {
    display: block;
    max-width: 7em;
    width: 30%;
    float: left;
    padding-top: 2em;
  }

  .chocolatiers {
    background-color: #808080;
    height: 3em;
    width: 100%;
    bottom: 0;
    border: 3px solid #595652;
    position: absolute;
  }
}

@media only screen and (min-width: 90em) {

  html {
    font-size: 130%;
    line-height: 1.5;
  }

  figcaption {
    font-style: italic;
    margin: 0;
    padding-top: 2em;
    font-size: 135%;
  }

  section {
    padding-top: 2em;
    float: none;
    text-align: center;
  }

  .description {
    max-width: 95%;
  }

  .image-1 {
    float: right;
    padding-left: .5em;
    margin: 0;
    width: 45%;

  }

  .image-2 {
    float: left;
    padding-left: .5em;
    padding-top: 1em;
    width: 33.3333%;
  }

  .hex-1 {
    display:block;
    max-width: 7em;
    width: 30%;
    float: right;
    padding-top: 2em;
  }

  .hex-2 {
    display: block;
    max-width: 7em;
    width: 30%;
    float: left;
    padding-top: 2em;
  }


  .chocolatiers {
    background-color: #808080;
    height: 3em;
    width: 100%;
    bottom: 0;
    border: 3px solid #595652;
    position: absolute;
  }
}

